nginx_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-sample-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: eks-sample-app
  labels:
    app: nginx
spec:
  replicas: 3 # Adjust as needed
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest # Or a specific version
        ports:
        - containerPort: 80
