test-pod.yaml
# test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ebs-app1
spec:
  containers:
  - name: app
    image: busybox
    command: [ "sleep", "3600" ]
    volumeMounts:
    - mountPath: "/data"
      name: ebs-volume
  volumes:
  - name: ebs-volume
    persistentVolumeClaim:
      claimName: ebs-pvc
