nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service #need to match in ingress
  namespace: eks-sample-app
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
